--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -fsanitize=address,undefined")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
 
+# Library
 add_library(inmemdb
     src/storage/hash_table_backend.cpp
 )
@@ -21,3 +22,14 @@ add_executable(inmemdb_test
 )
 
 target_link_libraries(inmemdb_test PRIVATE inmemdb)
+
+add_executable(test_hash_table
+    tests/test_hash_table.cpp
+)
+add_executable(bench_compare
+    benchmarks/bench_compare.cpp
+)
+target_link_libraries(bench_compare PRIVATE inmemdb)
+
+
+target_link_libraries(test_hash_table PRIVATE inmemdb)
