test: main+cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,52 @@
 cmake_minimum_required(VERSION 3.20)
-project(inmemdb VERSION 0.1.0 LANGUAGES CXX CUDA)
+project(imemdb VERSION 0.1.0 LANGUAGES CXX CUDA)
+
+# 1. GPU Architecture setup 
+# locally i have only rtx 3060 which is compute compatible with 8.6 (Ampere)
+# using native tries to detect it, meanwhile '86' will force it
+if(NOT CMAKE_CUDA_ARCHITECTURES)
+    set(CMAKE_CUDA_ARCHITECTURES 86)
+endif()
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
+#2. Standard & Flags
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 20)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+#cmpl and optm
+add_compile_options(-Wall -Wextra)
 
-add_compile_options(-Wall -Wextra -Werror)
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -fsanitize=address,undefined")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -ffast-math -fvisibility=hidden -flto=auto -DNDEBUG")
+# Debug Flags
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 set(CMAKE_CUDA_FLAGS_DEBUG "-g -G -O0")
-set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -arch=sm_80 -DNDEBUG")
-set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 
+#Release flags (For max performance)
+#-march=native: optimizes for ryzen 5900x
+# -O3 Max optimization
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -fvisibility=hidden -flto=auto -DNDEBUG")
+set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG --use_fast_math")
+
+#3. Core Library (Engine)
 add_library(inmemdb SHARED
-    src/storage/hash_table_backend.cpp
-    src/gpu/hash_kernel.cu
-    src/storage/gpu_memory.cu
+    # Memory & Layout
     src/storage/layout.cu
+    
+    # GPU Kernels
+    src/gpu/hash_kernel.cu
+    src/gpu/insert_kernel.cu
+    src/gpu/lookup_kernel.cu
+    
+    # CPU Router / Execution
+    src/execution/hash_router.cpp
 )
 
 target_include_directories(inmemdb PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR} 
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
@@ -39,42 +60,19 @@ if(UNIX AND NOT APPLE)
     target_compile_options(inmemdb PRIVATE -fvisibility=hidden)
 endif()
 
-add_executable(inmemdb_test
-    src/main.cpp
-)
-target_link_libraries(inmemdb_test PRIVATE inmemdb)
+#4. Main executable 
+add_executable(gpu_db_engine src/main.cpp)
 
-add_executable(test_hash_table
-    tests/test_hash_table.cpp
-)
-target_link_libraries(test_hash_table PRIVATE inmemdb)
+#5. Tests & Benchmarks (Future) to be added
 
-add_executable(bench_compare
-    benchmarks/bench_compare.cpp
-)
-target_link_libraries(bench_compare PRIVATE inmemdb)
-
-enable_testing()
-add_test(NAME hash_table_tests COMMAND test_hash_table)
-add_test(NAME benchmark COMMAND bench_compare)
-
+#6. Installation
 install(TARGETS inmemdb
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
 )
-
 install(DIRECTORY include/
     DESTINATION include
     FILES_MATCHING PATTERN "*.h"
 )
 
-configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/inmemdb.pc.in
-    ${CMAKE_CURRENT_BINARY_DIR}/inmemdb.pc
-    @ONLY
-)
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/inmemdb.pc
-    DESTINATION lib/pkgconfig
-)
