feat: integrated v_ops in hash , chore: optmization float4 to v_ops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(inmemdb SHARED
     src/gpu/hash_kernel.cu
     src/gpu/insert_kernel.cu
     src/gpu/lookup_kernel.cu
+    src/gpu/vector_ops.cu
     
     # CPU Router / Execution
     src/execution/hash_router.cpp
